# SpaceGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.org  valgrind-report.txt
cmake/: toolchain-mingw.cmake
include/: alloc.h  cstring.h  debug.h  dlist.h  dynlist.h  game.h  ldlist.h  objects.h  poolalloc.h  types.h
src/: alloc.c  dlist.c  dynlist.c  game.c  main.c  objects.c  poolalloc.c
